tests/NormalTests/paczka1/small_fuzzy/73429248.err
Error in line 3: S5K S663 21,3
Error in line 2: XZO9XrShVu S663 37,9
Error in line 12: XZO9XrShVu A307 46,3
